fixes- table alignment

--- a/cit230/assignments/lesson-7/styles/large-try-7.css
+++ b/cit230/assignments/lesson-7/styles/large-try-7.css
@@ -116,7 +116,6 @@ background-color: #111;
         position: relative;
         border-color: aqua;
         padding: 0;
-        left: -1%;
         column-rule-style: ridge;
         border: 2px solid aqua;
         color: #00E5BA;
